--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" href="./src/assets/favicon.svg" type="image/x-icon">
     <title>MintyBadger</title>
     <script type="module" src="./polyfills.ts"></script>
   </head>
